software-center (0.4.4) UNRELEASED; urgency=low

  * debian/rules:
    - cleanup, we do not need python-central, all the python code is
      in a private dir

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Sep 2009 11:10:54 +0200

software-center (0.4.3) karmic; urgency=low

  * debian/rules:
    - remove .PHONY again, it breaks building with DH7

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Sep 2009 09:26:32 +0200

software-center (0.4.2) karmic; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/pendingview.py:
    - fix empty progress view when the daemon exited in between
      (LP: #437685)
  * softwarecenter/view/appdetailsview.py:
    - fix crash when no candidate for a package can be found

  [ Loïc Minier ]
  * Add .PHONY to rules.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 28 Sep 2009 17:05:20 +0200

software-center (0.4.1) karmic; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/widgets/imagedialog.py:
    - ignore gconf errors when trying to read the proxy settings
      (LP: #436129)
  * fix some leftovers from the rename
  * softwarecenter/view/widgets/searchentry.py:
    - fix search icon not being displayed (thanks to Marcus Carlson
      and Matthew Joseph Mcgowan) LP: #437431
  * remove po/software-store.pot, we use po/software-center.pot now
  * softwarecenter/view/widgets/animatedimage.py:
    - fix crash in animatediamge.py (LP: #437662)
  * po/en_GB.po:
    - fix  spelling in en_GB (LP: #437652)
  * help/C/software-center-C.omf:
    - fix help (LP: #437859)
  * merged lp:~mdke/software-center/help-fixes (many thanks!)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 28 Sep 2009 11:04:22 +0200

software-center (0.4.0) karmic; urgency=low

  [ Michael Vogt ]
  * renamed to "Ubuntu Software Center" and software-center (LP: #436648)
  
  [ Loïc Minier ]
  * data/ubuntu-software-store.desktop.in: add missing semi-colon at end of
    Categories.
  * Use https instead of http in Vcs-Bzr URL.
