@@ -30,6 +30,7 @@ MISSING_APP_ICON = "applications-other"
 
 
 # values used in the database
+XAPIAN_VALUE_APPNAME = 170
 XAPIAN_VALUE_PKGNAME = 171
 XAPIAN_VALUE_ICON = 172
 XAPIAN_VALUE_GETTEXT_DOMAIN = 173
